<resources>
    <string name="app_name">Controle De Aulas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Horário de Aulas</string>
    <string name="nav_header_subtitle">apsiqueira23@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sair">Sair</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="enviarEmail">Enviar E-mail</string>
    <string name="sexta">Sexta</string>
    <string name="quarta">Quarta</string>
    <string name="communicate">Communicate</string>
    <string name="quinta">Quinta</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
</resources>
